test: Scraper Controllers