@@ -1,6 +1,10 @@
 package controller;
 
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
@@ -9,97 +13,131 @@ import backend.academy.scrapper.dto.request.AddLinkRequest;
 import backend.academy.scrapper.dto.request.RemoveLinkRequest;
 import backend.academy.scrapper.dto.response.LinkResponse;
 import backend.academy.scrapper.dto.response.ListLinksResponse;
-import backend.academy.scrapper.service.orm.OrmLinkService;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import backend.academy.scrapper.service.LinkService;
 import java.net.URI;
-import java.util.Collections;
-import lombok.SneakyThrows;
+import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.context.TestConfiguration;
-import org.springframework.context.annotation.Bean;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 
 @WebMvcTest(LinkController.class)
-@ContextConfiguration(classes = {LinkController.class, LinkControllerTest.TestConfig.class})
-@AutoConfigureMockMvc
+@ContextConfiguration(classes = {LinkController.class, BeanConfiguration.class})
 public class LinkControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
     @Autowired
-    private OrmLinkService linkService;
+    private LinkService linkService;
 
-    @Autowired
-    private ObjectMapper objectMapper;
+    private final Long testChatId = 123L;
+    private final URI testUrl = URI.create("https://example.com");
+    private final List<String> testTags = List.of("java", "spring");
+    private final List<String> testFilters = List.of("comments", "updates");
 
-    @TestConfiguration
-    static class TestConfig {
-        @Bean
-        public OrmLinkService linkService() {
-            return Mockito.mock(OrmLinkService.class);
-        }
-    }
-
-    @SneakyThrows
     @Test
-    @DisplayName("Получение всех link с помощью getAllLinks")
-    public void link_getAll_whenTgChatIdIsValid() {
-        ListLinksResponse mockResponse = new ListLinksResponse(Collections.emptyList(), 0);
-        when(linkService.findAllLinksByChatId(1L)).thenReturn(mockResponse);
+    @DisplayName("Получение всех ссылок - успешный сценарий")
+    void getAllLinks_shouldReturnOk() throws Exception {
+        LinkResponse linkResponse = new LinkResponse(1L, testUrl, testTags, testFilters);
+        ListLinksResponse expectedResponse = new ListLinksResponse(List.of(linkResponse), 1);
 
-        mockMvc.perform(MockMvcRequestBuilders.get("/links").header("Tg-Chat-Id", "1"))
-                .andExpect(status().isOk());
-    }
+        when(linkService.findAllLinksByChatId(testChatId)).thenReturn(expectedResponse);
 
-    @SneakyThrows
-    @Test
-    @DisplayName("Добавление ссылки по tg-chat-chatId")
-    public void link_addLink_whenTgChatIdIsValid() {
-        AddLinkRequest addLinkRequest =
-                new AddLinkRequest(URI.create("http://localhost"), Collections.emptyList(), Collections.emptyList());
-
-        LinkResponse mockLinkResponse =
-                new LinkResponse(2L, URI.create("http://localhost"), Collections.emptyList(), Collections.emptyList());
-
-        when(linkService.addLink(1L, addLinkRequest)).thenReturn(mockLinkResponse);
-
-        mockMvc.perform(MockMvcRequestBuilders.post("/links/{tgChatId}", 1L)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(addLinkRequest))
-                        .header("Tg-Chat-Id", "1"))
+        mockMvc.perform(get("/links").header("Tg-Chat-Id", testChatId))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(2L)) // Проверяем ID в ответе
-                .andExpect(jsonPath("$.url").value("http://localhost")); // Проверяем URL в ответе
+                .andExpect(jsonPath("$.links[0].id").value(1L))
+                .andExpect(jsonPath("$.links[0].url").value(testUrl.toString()))
+                .andExpect(jsonPath("$.links[0].tags").isArray())
+                .andExpect(jsonPath("$.links[0].tags[0]").value("java"))
+                .andExpect(jsonPath("$.links[0].filters[1]").value("updates"))
+                .andExpect(jsonPath("$.size").value(1));
 
-        Mockito.verify(linkService).addLink(1L, addLinkRequest);
+        verify(linkService).findAllLinksByChatId(testChatId);
     }
 
-    @SneakyThrows
     @Test
-    @DisplayName("Удаление ссылки по tg-chat-chatId")
-    public void link_deleteLink_whenTgChatIdIsValid() {
-        RemoveLinkRequest removeLinkRequest = new RemoveLinkRequest(URI.create("http://localhost"));
+    @DisplayName("Добавление ссылки с тегами и фильтрами - успешный сценарий")
+    void addLink_withTagsAndFilters_shouldReturnOk() throws Exception {
+        AddLinkRequest request = new AddLinkRequest(testUrl, testTags, testFilters);
+        LinkResponse expectedResponse = new LinkResponse(1L, testUrl, testTags, testFilters);
 
-        LinkResponse mockLinkResponse =
-                new LinkResponse(2L, URI.create("http://localhost"), Collections.emptyList(), Collections.emptyList());
+        when(linkService.addLink(testChatId, request)).thenReturn(expectedResponse);
 
-        when(linkService.deleteLink(1L, removeLinkRequest.link())).thenReturn(mockLinkResponse);
+        mockMvc.perform(
+                        post("/links/{tgChatId}", testChatId)
+                                .header("Tg-Chat-Id", testChatId)
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(
+                                        """
+                    {
+                        "link": "https://example.com",
+                        "tags": ["java", "spring"],
+                        "filters": ["comments", "updates"]
+                    }
+                    """))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(1L))
+                .andExpect(jsonPath("$.url").value(testUrl.toString()))
+                .andExpect(jsonPath("$.tags").isArray())
+                .andExpect(jsonPath("$.tags[1]").value("spring"))
+                .andExpect(jsonPath("$.filters[0]").value("comments"));
 
-        mockMvc.perform(MockMvcRequestBuilders.delete("/links/{tgChatId}", 1L)
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(removeLinkRequest))
-                        .header("Tg-Chat-Id", "1"))
-                .andExpect(status().isOk());
+        verify(linkService).addLink(testChatId, request);
+    }
 
-        Mockito.verify(linkService).deleteLink(1L, removeLinkRequest.link());
+    @Test
+    @DisplayName("Добавление ссылки без тегов и фильтров - успешный сценарий")
+    void addLink_withoutOptionalFields_shouldReturnOk() throws Exception {
+        AddLinkRequest request = new AddLinkRequest(testUrl, null, null);
+        LinkResponse expectedResponse = new LinkResponse(1L, testUrl, null, null);
+
+        when(linkService.addLink(testChatId, request)).thenReturn(expectedResponse);
+
+        mockMvc.perform(
+                        post("/links/{tgChatId}", testChatId)
+                                .header("Tg-Chat-Id", testChatId)
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(
+                                        """
+                    {
+                        "link": "https://example.com"
+                    }
+                    """))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(1L))
+                .andExpect(jsonPath("$.url").value(testUrl.toString()))
+                .andExpect(jsonPath("$.tags").doesNotExist())
+                .andExpect(jsonPath("$.filters").doesNotExist());
+    }
+
+    @Test
+    @DisplayName("Удаление ссылки - успешный сценарий")
+    void deleteLink_shouldReturnOk() throws Exception {
+        RemoveLinkRequest request = new RemoveLinkRequest(testUrl);
+        LinkResponse expectedResponse = new LinkResponse(1L, testUrl, testTags, testFilters);
+
+        when(linkService.deleteLink(testChatId, request.link())).thenReturn(expectedResponse);
+
+        mockMvc.perform(
+                        delete("/links/{tgChatId}", testChatId)
+                                .header("Tg-Chat-Id", testChatId)
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(
+                                        """
+                    {
+                        "link": "https://example.com"
+                    }
+                    """))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(1L))
+                .andExpect(jsonPath("$.url").value(testUrl.toString()))
+                .andExpect(jsonPath("$.tags[0]").value("java"))
+                .andExpect(jsonPath("$.filters[1]").value("updates"));
+
+        verify(linkService).deleteLink(testChatId, request.link());
     }
 }
